# betravel

./: .env  .gitignore  .test.env  Makefile  app.py  pyproject.toml  settings.toml
 .github/workflows/: tests.yml
.github/workflows/: tests.yml
__tests__/: categories_blueprint_test.py  fixtures.py  home_blueprint_test.py  home_controller_test.py  posts_blueprint_test.py  posts_controller_test.py  sign_in_blueprint_test.py  signin_controller_test.py  signup_controller_test.py
__tests__/factories/: category.py  post.py  user.py
app/: __init__.py  development.sqlite  extensions.py  forms.py  models.py  routes.py
app/blueprints/: categories_blueprint.py  home_blueprint.py  posts_blueprint.py
app/blueprints/sessions/: sign_in_blueprint.py  sign_up_blueprint.py
app/controllers/: categories_controller.py  home_controller.py  images_controller.py  posts_controller.py  signin_controller.py  signup_controller.py
app/templates/categories/: new.jinja
app/templates/home/: index.jinja
app/templates/posts/: new.jinja  show.jinja
app/templates/sessions/sign_in/: new.jinja
app/templates/sessions/sign_up/: new.jinja
app/templates/shared/: _flashes.jinja  _footer.jinja  _menu.jinja
app/views/home/: index.jinja
app/views/posts/: new.jinja  show.jinja
app/views/sessions/sign_in/: new.jinja
app/views/shared/: _flashes.jinja  layout.jinja
migrations/versions/: 97baa2922799_.py  cf59f0898098_.py
seeds/: category.py  post.py
tests/: categories_blueprint_test.py  conftest.py  fixtures.py  home_blueprint_test.py  home_test.py  posts_blueprint_test.py  sign_in_blueprint_test.py  sign_up_blueprint_test.py  visitors_view_home_page_test.py  visitors_view_post_test.py
tests/factories/: post.py  user.py
