[tool.poetry]
name = "betravel"
version = "0.1.0"
description = ""
authors = ["Marcus Pereira <marcus@negros.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
urllib3 = "^1.26.10"
Flask-SQLAlchemy = "^2.5.1"
dynaconf = "^3.1.9"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.20.0"
splinter = {version = "^0.18.1", extras = ["flask"]}
pytest = "^7.1.2"
Faker = "^13.15.0"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
