[tool.poetry]
name = "betravel"
version = "0.1.0"
description = ""
authors = ["Marcus Pereira <marcus@negros.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
urllib3 = "^1.26.10"
Flask-SQLAlchemy = "^2.5.1"
dynaconf = "^3.1.9"
Flask-WTF = "^1.0.1"
Flask-Login = "^0.6.1"
Flask-Migrate = "^3.1.0"
mvc-flask = "^2.4.0"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.20.0"
splinter = {version = "^0.18.1", extras = ["flask"]}
Faker = "^13.15.0"
factory-boy = "^3.2.1"
ward = "^0.66.1-beta.0"
black = "^22.6.0"
Flask-Seeder = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
