[tool.poetry]
name = "betravel"
version = "0.1.0"
description = ""
authors = ["Marcus Pereira <marcus@negros.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
urllib3 = "^1.26.10"
Flask-SQLAlchemy = "^2.5.1"
dynaconf = "^3.1.9"
Flask-WTF = "^1.0.1"
Flask-Login = "^0.6.1"
Flask-Migrate = "^3.1.0"
mvc-flask = "^2.4.0"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.20.0"
Faker = "^13.15.0"
factory-boy = "^3.2.1"
ward = "^0.66.1-beta.0"
Flask-Seeder = "^1.2.0"
black = {version = "^22.6.0", allow-prereleases = true}
autoflake = "^1.4"
splinter = {git = "https://github.com/cobrateam/splinter.git", extras = ["flask"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
